# pyfilesmanager

./: .gitignore  .pre-commit-config.yaml  .yamlfmt  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml  labels.yml
.github/workflows/: ci.yml  label-sync.yml  release.yml
src/pyfilesmanager/: cli.py
src/pyfilesmanager/files/: finder.py  hasher.py  scanner.py
src/pyfilesmanager/utils/: debugger.py  groups.py
tests/unit/: test_cli.py
tests/unit/files/: test_finder.py  test_hasher.py  test_scanner.py
tests/unit/utils/: test_debugger.py  test_groups.py
