[project]
name = "pyfilesmanager"
version = "0.2.0"
description = "Files manager utilities in python"
authors = [{ name = "Marcin Skrobczyński", email = "marcin@skrobczynski.pl" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.0.0,<9.0.0"]

[dependency-groups]
build = ["python-semantic-release>=10.5.0"]
tests = ["pytest>=9", "pytest-cov>=7.0.0,<8.0.0"]

################################################################################

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

################################################################################

[project.scripts]
pyfilesmanager = "pyfilesmanager.cli:main"

################################################################################

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
upload_to_pypi = false
commit_parser = "conventional"
commit_message = "chore(release): {version}"
allow_zero_version = true

[tool.semantic_release.commit_parser_options]
patch_tags = ["fix", "perf", "ci", "build", "style", "refactor"]
other_allowed_tags = ["docs", "test", "chore"]

[tool.semantic_release.changelog]
mode = "update"
exclude_commit_patterns = []
default_templates = { changelog_file = "CHANGELOG.md", output_format = "md" }

[tool.semantic_release.publish]
upload_to_vcs_release = true

################################################################################

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]

################################################################################

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "C90", # mccabe
  "UP",  # pyupgrade
  "I",   # isort
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "C4",  # flake8-comprehensions
  "T10", # flake8-debugger
  "T20", # flake8-print
  "SIM", # flake8-simplify
  "S",   # flake8-bandit
  "TID", # flake8-tidy-imports
  "PL",  # pylint
]
ignore = [
  "S101", # assert
]

[tool.ruff.lint.pylint]
max-args = 5

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
